<resources>
    <string name="app_name">AssistantCloudComputing</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="signup_page">SignUp Page</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_page">LogIn Page</string>
    <string name="login">LogIn</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="loading">Start Saying…</string>
    <string name="record">Record</string>
    <string name="logout">LogOut</string>
    <string name="start">Start</string>
</resources>